--- a/pom.xml
+++ b/pom.xml
@@ -2,9 +2,15 @@
    xmlns:xsi = "http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation = "http://maven.apache.org/POM/4.0.0
    http://maven.apache.org/xsd/maven-4.0.0.xsd">
-   <modelVersion>4.0.0</modelVersion>
-
-   <groupId>com.companyname.project-group</groupId>
-   <artifactId>project</artifactId>
-   <version>1.0</version>
-</project>
+      <modelVersion>4.0.0</modelVersion>
+      <groupId>com.mycompany.calculator</groupId>
+      <artifactId>calculator</artifactId>
+      <version>1</version>
+   
+   <scm>
+		<url>https://github.com/pravalikakola/pipelinerepo</url>
+		<connection>scm:git:git://github.com/pravalikakola/pipelinerepo.git</connection>
+		<developerConnection>scm:git:git@github.com:pravalikakola/pipelinerepo.git</developerConnection>
+	</scm>
+ 
+</project> 
